# MetaWorkflow

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
config/: runtime.example.toml
scripts/: bootstrap_env.py  run_coding_smoke.py  run_episode.py  run_harness.py  run_real_tasks.py  run_runtime_smoke.py  run_tests.py
src/meta_controller/: __init__.py  config.py  controller.py  runtime_config.py
src/meta_controller/app/: __init__.py  main.py
src/meta_controller/core/: __init__.py  domain_router.py  judge.py  memory_manager.py  models.py  scaffold_editor.py  scheduler.py  task_analyzer.py  workflow_synthesizer.py
src/meta_controller/eval/: __init__.py  harness.py
src/meta_controller/graphs/templates/: benchmark_design_run_analyze.yaml  hybrid_research_to_code.yaml  issue_triage_fix_test.yaml  planner_executor_reviewer.yaml  prototype_app_builder_verify.yaml  prototype_app_direct_builder_verify.yaml  repo_explore_implement_test_review.yaml  research_experiment_judge.yaml  research_survey_synthesis.yaml  single_shot.yaml
src/meta_controller/runtimes/: __init__.py  base.py  claude_runtime.py  local_app_runtime.py  openhands_runtime.py
src/meta_controller/workers/: __init__.py  base.py
src/meta_controller/workers/coding/: __init__.py  app_spec_extractor.py  app_verifier.py  fullstack_builder.py  (+6 more)
tests/: test_controller_run.py  test_domain_router.py  test_harness.py  test_prototype_app_routing.py  test_research_workflow.py  test_runtime_config.py  test_runtime_helpers.py  test_scheduler_fallback.py  test_task_analyzer.py  test_workflow_synthesizer.py
(+7 files in other folders)
